# q-digest

./: CMakeLists.txt  qdigest.cpp  qdigest.h
